<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.detail.DetailActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:src="@drawable/poster_alita"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/opensans_sb"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:text="@string/title_film"
            app:layout_constraintTop_toBottomOf="@id/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/date"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_film"
                android:fontFamily="@font/roboto_reg"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_date" />

            <TextView
                android:id="@+id/genre"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_film"
                android:fontFamily="@font/roboto_reg"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_episode" />

            <TextView
                android:id="@+id/desc"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_film"
                android:fontFamily="@font/roboto_reg"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>